# static-compress

./: .gitignore  Cargo.toml  README.md
src/: compression.rs  errors.rs  lists.rs  main.rs  structs.rs
