[package]
name = "static-compress"
version = "0.1.2"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Create a compressed copy of files matching a glob to serve statically compressed files with a web server"
homepage = "https://github.com/neosmart/static-compress"
repository = "https://github.com/neosmart/static-compress"
readme = "README.md"
keywords = ["nginx", "gzip", "zopfli", "brotli", "apache"]
categories = ["command-line-utilities", "compression", "web programming"]
license = "MIT"

[dependencies]
brotli2 = "0.3.0"
chan = "0.1.19"
clap = "2.25.0"
error-chain = "0.10.0"
filetime = "0.1.10"
flate2 = "0.2.19"
glob = "0.2.11"
stderr = "0.7.1"
zopfli = "0.3.6"
