[package]
name = "static-compress"
version = "0.3.3"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Create a compressed copy of files matching a glob to serve statically compressed files with a web server"
homepage = "https://github.com/neosmart/static-compress"
repository = "https://github.com/neosmart/static-compress"
readme = "README.md"
keywords = ["nginx", "gzip", "compression", "brotli", "apache"]
categories = ["command-line-utilities", "compression", "web-programming"]
license = "MIT"

[dependencies]
brotli2 = "0.3.0"
chan = "0.1.19"
clap = "3"
error-chain = "0.12"
filetime = "0.2"
flate2 = "1.0"
globset = "0.4"
pretty-bytes = "0.2.1"
prettytable-rs = "0.8"
separator = "0.4"
stderr = "0.8"
zopfli = "0.5.0"
